--- a/chen_simulation/sim_1d.Rmd
+++ b/chen_simulation/sim_1d.Rmd
@@ -187,6 +187,10 @@ for (curr_index in 1:10) {
   layer_dropout(rate = 0.4) %>% 
   layer_dense(units = 128, activation = 'relu') %>%
   layer_dropout(rate = 0.3) %>%
+  layer_dense(units = 128, activation = 'relu') %>%
+  layer_dropout(rate = 0.3) %>%
+  layer_dense(units = 128, activation = 'relu') %>%
+  layer_dropout(rate = 0.3) %>%
   layer_dense(units = 1, activation = 'linear')
   
   model_dk %>% compile(
@@ -233,4 +237,5 @@ mean(res_krig^2)
 mean(res_dnn^2)
 mean(res_dkrig^2)
 ```
+
 
