--- a/chen_simulation/sim_2d.Rmd
+++ b/chen_simulation/sim_2d.Rmd
@@ -64,7 +64,8 @@ ggplot() +
 ```{r}
 # Kriging with Matern function
 
-# likfit(coords = sim_coords, data = sim_y, ini.cov.pars = c(1,0.1), fix.kappa = FALSE)
+
+
 ```
 
 By applying the likfit function, we can get the MLE of the estimation of the Matern kernel parameters, and the MLE is $\phi = 4.2183, \kappa=0.5$. That's just exponential correlation function with range 4.2183. And the $\sigma^2=0.1234$, with an intercept $\beta_0 = -0.1168$
@@ -74,7 +75,7 @@ $$\hat{Y}(s) = -0.1168 + \epsilon(s)$$
 where $\epsilon(s) \sim GP(\phi = 4.2183, exp, \sigma^2 = 0.1234)$
 ```{r}
 pair_dist_2d <- spDists( as.matrix(sim_coords) )
-cov_mat <- 0.1234 * exp(-pair_dist_2d/4.2183)
+
 train_all_index <- sample(1:10, 900, replace = TRUE)
 krig_mean_all <- rep(NA, 900)
 dkrig_mean_all <- rep(NA, 900)
@@ -94,6 +95,10 @@ for (curr_index in 1:10) {
   train_y <- sim_y[train_index]
   test_coords <- sim_coords[-train_index,]
   test_y <- sim_y[-train_index]
+  
+  # Change the population
+  #curr_res <- likfit(coords = train_coords, data = train_y, ini.cov.pars = c(1,0.1), fix.kappa = FALSE)
+  cov_mat <- 0.1234 * exp(-pair_dist_2d/4.2183)
 
   # Classical Kriging
   exp_sig_11 <- cov_mat[train_index, train_index]
@@ -131,7 +136,7 @@ model_dnn %>%
 
 model_dnn %>% compile(
   loss = "mse",
-  optimizer = optimizer_rmsprop(),
+  optimizer = optimizer_adam(),
   metrics = list("mse")
 )
 
@@ -169,7 +174,7 @@ model_dk %>%
 
 model_dk %>% compile(
   loss = "mse",
-  optimizer = optimizer_rmsprop(),
+  optimizer = optimizer_adam(),
   metrics = list("mse")
 )
 
@@ -265,9 +270,9 @@ p_ck <-
 
 
 ```{r}
-mean((krig_mean_all - sim_y)^2)
-mean((nn_mean_all - sim_y)^2)
-mean((dkrig_mean_all - sim_y)^2)
+sqrt(mean((krig_mean_all - sim_y)^2))
+sqrt(mean((nn_mean_all - sim_y)^2))
+sqrt(mean((dkrig_mean_all - sim_y)^2))
 mean((ckrig_mean_all - sim_y)^2)
 cowplot::plot_grid(p_obs, p_krig, p_dnn, p_dk, p_ck)
 
@@ -277,7 +282,7 @@ mse_mat <- as.data.frame(cbind(mse_vec_krig, mse_vec_nn, mse_vec_dkrig, mse_vec_
 
 ```{r}
 ggplot() +
-  geom_boxplot(data = reshape2::melt(mse_mat), aes(x = variable, y = value)) +
+  geom_boxplot(data = reshape2::melt(sqrt(mse_mat)), aes(x = variable, y = value)) +
    coord_flip()
 ```
 
